k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django

  template:
    metadata:
      labels:
        app: django

        spec:
  template:
    spec:  
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: django-app
        image: madanrayamajhi/django-prod:latest

    spec:
      containers:
        - name: django
          image: your-dockerhub/django-app:latest
          ports:
            - containerPort: 8000
